fix some bugs change some demo add docker-compose-test

--- a/frp/docker-compose.yaml
+++ b/frp/docker-compose.yaml
@@ -2,18 +2,24 @@ version: "3"
 volumes:
   conf-frp:
 services:
-  zctmdc-frps:
+  frps-demo:
     build:
       context: .
       dockerfile: Dockerfile
     image: zctmdc/frp:Alpha
-    container_name: zctmdc-frps
+    container_name: frps-demo
+    hostname: frps-demo
     # network_mode: host
     restart: always
     environment:
-      - SUBDOMAIN_HOST=frp.zctmdc.cc
+      - SUBDOMAIN_HOST=frps-demo
+      - BIND_PORT=7000
+      - BIND_UDP_PORT=7001
       - VHOST_HTTP_PORT=3080
       - VHOST_HTTPS_PORT=3443
+      - ADMIN_USER=admin
+      - ADMIN_PWD=admin
+      - ADMIN_PORT=7400
     ports:
       - 7000:7000/tcp
       - 7000:7000/udp
@@ -24,51 +30,60 @@ services:
     # volumes:
     #   - /path/to/conf:/etc/frp/:ro
     command: ["/usr/sbin/frps", "-c", "/etc/frp/frps.ini"]
-    # healthcheck:
-    #   test:
-    #     [
-    #       "CMD",
-    #       "sh",
+    healthcheck:
+      test: [
+          "CMD",
+          "/bin/bash",
+          "-f",
+          "/opt/healthcheck/healthcheck-frps.sh",
+          "||",
+    #       "/bin/bash",
     #       "-c",
-    #       "http_code=$$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} http://$$SUBDOMAIN_HOST:$$ADMIN_PORT/api/serverinfo) && \
+    #       "http_code=$$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} --connect-timeout 10 http://$$SUBDOMAIN_HOST:$$ADMIN_PORT/api/serverinfo) && \
     #       if [[ $$http_code != 200 ]]; then \
     #         echo [ FRPS Dashboard check faild ]; \
-    #         exit 11; \
+    #         exit 1; \
     #       else \
     #         echo [ FRPS Dashboard check pass ]; \
     #       fi",
     #       "||",
-    #       "exit 11",
-    #     ]
-    #   interval: 30s
-    #   timeout: 10s
-    #   retries: 3
+          "exit 1",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  zctmdc-frpc:
+  frpc-demo:
     image: zctmdc/frp:Alpha
-    # hostname: your-frp-name
-    container_name: zctmdc-frpc
+    # hostname: frpc-demo
+    container_name: frpc-demo
     # network_mode: host
     restart: always
-    command: ["/usr/sbin/frpc", "-c", "/etc/frp/frpc.ini"]
     environment:
-      - SUBDOMAIN_HOST=frp.zctmdc.cc
+      - SUBDOMAIN_HOST=frps-demo
+      - BIND_PORT=7000
+      - BIND_UDP_PORT=7001
+      - TOKEN=12345678
+      - VHOST_HTTP_PORT=3080
       - ADMIN_USER=admin
       - ADMIN_PWD=admin
+      - ADMIN_PORT=7400
+      - SK=12345678
     # volumes:
     #   - conf-frp:/etc/frp/
+    command: ["/usr/sbin/frpc", "-c", "/etc/frp/frpc.ini"]
     healthcheck:
       test: [
           "CMD",
-          "bash",
+          "/bin/bash",
           "-f",
           "/opt/healthcheck/healthcheck-frpc.sh",
           "||",
-          # "sh", "-c",
-          # "http_code=$$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} http://$$(hostname -s).$$SUBDOMAIN_HOST:$$VHOST_HTTP_PORT/api/status) && \
+          # "/bin/bash", "-c",
+          # "http_code=$$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} --connect-timeout 10 http://$$(hostname -s).$$SUBDOMAIN_HOST:$$VHOST_HTTP_PORT/api/status) && \
           # if [[ $$http_code != 200 ]]; then \
           #   echo [ FRPC adminUI check faild ]; \
-          #   exit 11; \
+          #   exit 1; \
           # else \
           #   echo [ FRPC adminUI check pass ]; \
           # fi",
@@ -78,5 +93,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    # depends_on:
-    #   - zctmdc-frps
+    depends_on:
+      - frps-demo
+    external_links:
+      - frps-demo
