--- a/frp/docker-compose.test.yaml
+++ b/frp/docker-compose.test.yaml
@@ -2,29 +2,23 @@ version: "3"
 volumes:
   conf-frp:
 services:
-  frps-demo:
+  frps-test:
     build:
       context: .
       dockerfile: Dockerfile
     image: zctmdc/frp:Alpha
-    container_name: frps-demo
-    hostname: frps-demo
+    container_name: frps-test
+    hostname: frps-test
     environment:
-      - SUBDOMAIN_HOST=frps-demo
-    command: [
-        "/bin/bash",
-        "-c",
-        "/usr/sbin/frps -c /etc/frp/frps.ini & \
-        sleep 5 && \
-        /opt/healthcheck/healthcheck.sh",
-      ]
+      - SUBDOMAIN_HOST=frps-test
+    command: ["/bin/bash", "-c", "/usr/sbin/frps -c /etc/frp/frps.ini"]
 
   frpc-test:
     image: zctmdc/frp:Alpha
     container_name: frpc-test
     # hostname: frpc-test
     environment:
-      - SUBDOMAIN_HOST=frps-demo
+      - SUBDOMAIN_HOST=frps-test
     command: [
         "/bin/bash",
         "-c",
@@ -32,6 +26,6 @@ services:
         /opt/healthcheck/healthcheck.sh",
       ]
     depends_on:
-      - frps-demo
+      - frps-test
     external_links:
-      - frps-demo
+      - frps-test
