--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,10 @@ jobs:
           tags: zctmdc/frp:Alpha
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
+      -  
+        name: Test build
+        run : |
+              docker-compose -f /frp/docker-compose.test.yaml up --exit-code-from  frpc-test || exit 1
       -
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
