--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,9 @@ jobs:
       -  
         name: Test build
         run : |
-              docker-compose -f /frp/docker-compose.test.yaml up --exit-code-from  frpc-test || exit 1
+          pwd
+          ls -l 
+          docker-compose -f /frp/docker-compose.test.yaml up --exit-code-from  frpc-test || exit 1
       -
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
