--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,8 @@ jobs:
         name: Test build
         run : |
           pwd
-          ls -l 
-          docker-compose -f /frp/docker-compose.test.yaml up --exit-code-from  frpc-test || exit 1
+          ls -l ./frp/
+          docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test || exit 1
       -
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
