--- a/frp/docker-compose.test.yaml
+++ b/frp/docker-compose.test.yaml
@@ -22,8 +22,9 @@ services:
     command: [
         "/bin/bash",
         "-c",
-        "/usr/sbin/frpc -c /etc/frp/frpc.ini & \
-        sleep 3 && /opt/healthcheck/healthcheck.sh",
+        "/usr/sbin/frpc -c /etc/frp/frpc.ini \
+        & curl -u ${ADMIN_USER}:${ADMIN_PWD} -H -I -k -m 2 -o /dev/null -s -w %{http_code} --connect-timeout 10 http://localhost:${ADMIN_PORT}/api/status \
+        && /opt/healthcheck/healthcheck.sh",
       ]
     depends_on:
       - frps-test
