--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: zctmdc/frp:Alpha
-          cache-from: type=registry,ref=user/app:latest
+          cache-from: type=registry,ref=zctmdc/frp:Alpha
           cache-to: type=inline
 #          cache-from: type=local,src=/tmp/.buildx-cache
 #          cache-to: type=local,dest=/tmp/.buildx-cache-new
