--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       -  
         name: Docker test
         run : |
-          docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test || exit $?
+          docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test
 #       -
 #         # Temp fix
 #         # https://github.com/docker/build-push-action/issues/252
