--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,37 +3,45 @@ name: ci
 on:
   push:
     branches:
-      - 'alpha'
+      - "alpha"
+  pull_request:
+    branches:
+      - alpha
 
 jobs:
   docker-build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-#       -
-#         name: Cache Docker layers
-#         uses: actions/cache@v2
-#         with:
-#           path: /tmp/.buildx-cache
-#           key: ${{ runner.os }}-buildx-${{ github.sha }}
-#           restore-keys: |
-#             ${{ runner.os }}-buildx-
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push zctmdc/frp:Alpha
+
+      - name: Build zctmdc/frp:Alpha
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frp
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: false
+          tags: zctmdc/frp:Alpha
+          cache-from: type=registry,ref=zctmdc/frp:Alpha
+          cache-to: type=inline
+
+      - name: Test zctmdc/frp:Alpha
+        run: |
+          docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test
+
+      - name: Push zctmdc/frp:Alpha
         uses: docker/build-push-action@v2
         with:
           context: ./frp
@@ -42,17 +50,3 @@ jobs:
           tags: zctmdc/frp:Alpha
           cache-from: type=registry,ref=zctmdc/frp:Alpha
           cache-to: type=inline
-#          cache-from: type=local,src=/tmp/.buildx-cache
-#          cache-to: type=local,dest=/tmp/.buildx-cache-new
-      -  
-        name: Docker test
-        run : |
-          docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test
-#       -
-#         # Temp fix
-#         # https://github.com/docker/build-push-action/issues/252
-#         # https://github.com/moby/buildkit/issues/1896
-#         name: Move cache
-#         run: |
-#           rm -rf /tmp/.buildx-cache
-#           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
