--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,9 @@ jobs:
       - name: Push zctmdc/frp:Alpha
         uses: docker/build-push-action@v2
         with:
-          context: ./frp
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          # context: ./frp
+          # platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: zctmdc/frp:Alpha
-          cache-from: type=registry,ref=zctmdc/frp:Alpha
-          cache-to: type=inline
+          # cache-from: type=registry,ref=zctmdc/frp:Alpha
+          # cache-to: type=inline
