--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,34 +27,39 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push zctmdc/frp:Alpha
-        uses: docker/build-push-action@v2
-        with:
-          context: ./frp
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          push: true
-          tags: zctmdc/frp:Alpha
-          cache-from: type=registry,ref=zctmdc/frp:Alpha
-          cache-to: type=inline
-
-      - name: Test zctmdc/frp:Alpha
-        run: |
-          # docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test
-          docker run --name frps-test -d --rm -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
-           /bin/bash -c "/usr/sbin/frps -c /etc/frp/frps.ini & \
-            sleep 10 \
-            && exit 0"
-          docker run -t --rm --link frps-test:frps-test -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
-            /bin/bash -c "/usr/sbin/frpc -c /etc/frp/frpc.ini & \
-            sleep 2 \
-            && /opt/healthcheck/healthcheck.sh"
-
-      # - name: Push zctmdc/frp:Alpha
+      # - name: Build and push zctmdc/frp:Alpha
       #   uses: docker/build-push-action@v2
       #   with:
-      #     # context: ./frp
-      #     # platforms: linux/amd64,linux/arm64,linux/arm/v7
+      #     context: ./frp
+      #     platforms: linux/amd64,linux/arm64,linux/arm/v7
       #     push: true
       #     tags: zctmdc/frp:Alpha
-      #     # cache-from: type=registry,ref=zctmdc/frp:Alpha
-      #     # cache-to: type=inline
+      #     cache-from: type=registry,ref=zctmdc/frp:Alpha
+      #     cache-to: type=inline
+
+      # - name: Test zctmdc/frp:Alpha
+      #   run: |
+      #     docker-compose -f ./frp/docker-compose.test.yaml up --exit-code-from  frpc-test
+      #     # docker run --name frps-test -d --rm -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
+      #     #  /bin/bash -c "/usr/sbin/frps -c /etc/frp/frps.ini & \
+      #     #   sleep 10 \
+      #     #   && exit 0"
+      #     # docker run -t --rm --link frps-test:frps-test -e SUBDOMAIN_HOST=frps-test zctmdc/frp:Alpha \
+      #     #   /bin/bash -c "/usr/sbin/frpc -c /etc/frp/frpc.ini & \
+      #     #   sleep 2 \
+      #     #   && /opt/healthcheck/healthcheck.sh"
+      -
+        name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+
+      # - name: Build test and push
+      #   run: |
+      #     for project in $(ls); do
+      #       echo "buildx - ${project}"
+      #       docker buildx build \
+      #         --platform=linux/amd64,linux/arm64,linux/arm/v7 \
+      #         ${build_cmd} \
+      #         --tag zctmdc/${project}:Alpha \
+      #         ./${project} \
+      #         --push
+      #     done
