--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up QEMU
+        id: buildx
         uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
@@ -48,10 +49,8 @@ jobs:
       #     #   /bin/bash -c "/usr/sbin/frpc -c /etc/frp/frpc.ini & \
       #     #   sleep 2 \
       #     #   && /opt/healthcheck/healthcheck.sh"
-      -
-        name: Available platforms
+      - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-
       # - name: Build test and push
       #   run: |
       #     for project in $(ls); do
