update :  wget log

--- a/route_apps_server/Dockerfile
+++ b/route_apps_server/Dockerfile
@@ -41,8 +41,7 @@ RUN chmod a+x /usr/local/bin/*.sh
 RUN set -x \
   && . /usr/local/bin/init.sh \
   && qshell_version=$(curl -k -sS https://github.com/qiniu/qshell/releases/latest | grep -Eo "[vV][0-9]+.[0-9]+.[0-9]+"| head -n 1) \
-  && wget \
-    -O /tmp/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz \
+  && wget -qO /tmp/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz \
     http://devtools.qiniu.com/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz \
   && tar -zxvf  /tmp/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz -C /tmp \
   && mv /tmp/qshell /usr/local/bin/qshell
