--- a/route_apps_server/Dockerfile
+++ b/route_apps_server/Dockerfile
@@ -19,18 +19,19 @@ RUN set -x \
   && sed -i '0,/index.*/s//autoindex on;/'  /etc/nginx/conf.d/default.conf 
 
 ARG DEBIAN_FRONTEND=noninteractive
-RUN  apt-get update \
-  && apt-get install --no-install-recommends --no-install-suggests -y \
+RUN apt-get update && apt-get -y upgrade
+RUN apt-get -y install \
   apt-utils tzdata \
   && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
   && echo "Asia/Shanghai" > /etc/timezone \
-  && dpkg-reconfigure -f noninteractive tzdata \
-  && apt-get clean
+  && dpkg-reconfigure -f noninteractive tzdata
+##################-----##################
 
-RUN  apt-get update \
-  && apt-get install --no-install-recommends --no-install-suggests -y \ 
-  git unzip curl ca-certificates wget sed bash 
+RUN  apt-get install -y \ 
+  git unzip curl ca-certificates wget sed bash
 
+##################-----##################
+RUN apt-get clean 
 # RUN git config --global url."https://gitclone.com/".insteadOf https://
 # RUN go env -w GOPROXY=https://goproxy.cn
 
@@ -41,7 +42,7 @@ RUN chmod a+x /usr/local/bin/*.sh
 RUN set -x \
   && . /usr/local/bin/init.sh \
   && qshell_version=$(curl -k -sS https://github.com/qiniu/qshell/releases/latest | grep -Eo "[vV][0-9]+.[0-9]+.[0-9]+"| head -n 1) \
-  && wget -qO /tmp/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz \
+  && wget --no-check-certificate -qO /tmp/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz \
     http://devtools.qiniu.com/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz \
   && tar -zxvf  /tmp/qshell-${qshell_version}-${myos}-${mycpu}.tar.gz -C /tmp \
   && mv /tmp/qshell /usr/local/bin/qshell
