--- a/frp/frpc.ini
+++ b/frp/frpc.ini
@@ -22,7 +22,7 @@ user = {{ .Envs.HOSTNAME }}
 
 [http_admin_UI]
 type = http
-subdomain = {{ .Envs.HOSTNAME }}
+subdomain = {{ .Envs.HOSTNAME }}-admin
 local_ip = localhost
 local_port = {{ .Envs.ADMIN_PORT }}
 
