--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,14 @@
-name: ci
+name: build all
 
 on:
   push:
     branches:
-      - "alpha"
+      # - alpha
+      - master
   pull_request:
     branches:
-      - alpha
+      # - alpha
+      - master
 
 jobs:
   docker-build:
