--- a/.github/workflows/n2n_proxy.yml
+++ b/.github/workflows/n2n_proxy.yml
@@ -7,6 +7,12 @@ on:
   pull_request:
     branches:
       - alpha
+
+env:
+  USERNAME: zctmdc
+  APPNAME: n2n_proxy
+  TAGNAME: Alpha
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -27,8 +33,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: n2n_ntop
+          context: ${{ env.APPNAME }}
           push: true
-          tags: zctmdc/n2n_proxy:Alpha
-          cache-from: type=registry,ref=zctmdc/n2n_proxy:buildcache
-          cache-to: type=registry,ref=zctmdc/n2n_proxy:buildcache,mode=max
+          tags: ${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}
+          cache-from: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}buildcache
+          cache-to: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}buildcache,mode=max
