--- a/.github/workflows/n2n.yml
+++ b/.github/workflows/n2n.yml
@@ -36,6 +36,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ${{ env.APPNAME }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: ${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}
           cache-from: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}buildcache
@@ -64,6 +65,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ${{ env.APPNAME }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: ${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}
           cache-from: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}buildcache
@@ -91,6 +93,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ${{ env.APPNAME }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: ${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}
           cache-from: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:${{ env.TAGNAME }}buildcache
