--- a/frp/docker-compose.test.yaml
+++ b/frp/docker-compose.test.yaml
@@ -32,5 +32,27 @@ services:
       ]
     depends_on:
       - frps-test
-    external_links:
+    links:
+      - frps-test
+      
+  frp-test:
+    image: zctmdc/frp:Alpha
+    container_name: frp-test
+    # hostname: frp-test
+    environment:
+      - SUBDOMAIN_HOST=frps-test
+    command: [
+        "/bin/bash",
+        "-c",
+        "/usr/sbin/frpc -c /etc/frp/frpc.ini \
+        & sleep 2 \
+        && /opt/healthcheck/healthcheck.sh",
+        # # not working
+        # "& url -k -m 1 --retry-connrefused --retry 5--retry-delay 1 \
+        # http://localhost:${ADMIN_PORT}/api/status \
+        # && /opt/healthcheck/healthcheck.sh",
+      ]
+    depends_on:
+      - frps-test
+    links:
       - frps-test
