update build test

--- a/.github/workflows/n2n.yml
+++ b/.github/workflows/n2n.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Test Docker
         run: |
               if [[ -f ${{ env.APPNAME }}/docker-compose.test.yaml ]]; then 
-                docker-compose -f ./${{ env.APPNAME }}/docker-compose.test.yaml up --exit-code-from  ${{ env.APPNAME }}-test || continue
+                docker-compose -f ./${{ env.APPNAME }}/docker-compose.test.yaml up --exit-code-from  ${{ env.APPNAME }}-test || exit 1
               fi
   n2n_proxy:
     needs: n2n_ntop
