--- a/.github/workflows/nginx_file_server.yml
+++ b/.github/workflows/nginx_file_server.yml
@@ -47,6 +47,6 @@ jobs:
           cache-to: type=registry,ref=${{ env.USERNAME }}/${{ env.APPNAME }}:buildcache-${{ env.TAGNAME }},mode=max
       - name: Test Docker
         run: |
-              if [[ -f ${{ env.APPNAME }}/docker-compose.test.yaml ]]; then
-                docker-compose -f ./${{ env.APPNAME }}/docker-compose.test.yaml up --exit-code-from  ${{ env.APPNAME }}-test || exit 1
+              if [[ -f ${{ env.CONTEXTPATH }}/docker-compose.test.yaml ]]; then
+                docker-compose -f ./${{ env.CONTEXTPATH }}/docker-compose.test.yaml up --exit-code-from  ${{ env.APPNAME }}-test || exit 1
               fi
