--- a/nginx_file_server/docker-compose.yaml
+++ b/nginx_file_server/docker-compose.yaml
@@ -7,7 +7,6 @@ services:
     image: zctmdc/file-server:Alpha
     # restart: always
     # volumes:
-      # - C:\Users\ZCTMDC\OneDrive\cloud\apps\route:/workpath:ro
-      # - C:\Users\ZCTMDC\Downloads\share:/workpath:ro
+      # - path/to/dir:/workpath:ro
     ports:
       - 16680:80
